<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">


        <ImageView
            android:id="@+id/tv_logo"
            android:layout_width="match_parent"
            android:layout_height="171dp"
            android:background="@drawable/logo1"
            android:contentDescription="@string/logo"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/myapps"
            android:textColor="@color/black"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_logo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/silahkan_login_terlebih_dahulu"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:autofillHints="username"
            android:id="@+id/et_user"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@id/tv_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="5dp"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="textPersonName"/>

        <EditText
            android:autofillHints="password"
            android:layout_marginTop="10dp"
            android:id="@+id/et_pass"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@id/et_user"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_pass"
            android:textSize="20sp"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:backgroundTint="#6E87A1"
            android:text="@string/login"
            android:textColor="@color/black" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:gravity="center"
            android:text="@string/buat_akun_baru"
            android:textSize="15sp"
            android:textColor="#616B75"/>


    </RelativeLayout>

</LinearLayout>